--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,14 +2,16 @@
   "name": "donorbuddy",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:8080",
+  "proxy": "http://localhost:8080/",
   "devDependencies": {
     "react-scripts": "0.8.4"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "jquery": "^3.1.1",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
