--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,25 @@
 machine:
   services:
     - docker
+  environment:
+    GOPATH: /home/ubuntu/.go_workspace
+    IMPORT_PATH: github.com/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME
+
+general:
+  build_dir: ../.go_workspace/src/$IMPORT_PATH
 
 dependencies:
   override:
-    - docker info
+    - go get -u
+
+compile:
+  override:
+    - go build -o donorbuddy
+
+test:
+  override:
+    - go test -v ./...
+
+deployment:
+  master:
     - docker build .
