--- a/circle.yml
+++ b/circle.yml
@@ -21,4 +21,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push buildlet/donorbuddy
+      - docker push buildleft/donorbuddy
