--- a/circle.yml
+++ b/circle.yml
@@ -9,7 +9,7 @@ dependencies:
 
 compile:
   override:
-    - docker build .
+    - docker build --rm=false -t buildleft/donorbuddy .
 
 test:
   override:
