--- a/circle.yml
+++ b/circle.yml
@@ -20,4 +20,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push buildleft/donorbuddy
+      - docker push buildleft/donorbuddy:$CIRCLE_SHA1
